// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ATOMIZE SHEET NATIVE, DEVELOPMENt 1`] = `
Object {
  "label": Array [
    Array [
      "color: blue /*sheet.label[0]*/",
    ],
  ],
  "nativeOnly": Array [
    Array [
      "margin: 20 /*sheet.nativeOnly/$native*/",
    ],
  ],
  "root": Array [
    Array [
      "margin: 4 /*sheet.root*/",
      "padding: 4 /*sheet.root*/",
    ],
    Array [
      "padding: 10 /*sheet.root/$native[0]*/",
    ],
  ],
}
`;

exports[`ATOMIZE SHEET NATIVE, PRODUCTION 1`] = `
Object {
  "label": Array [
    Array [
      Object {
        "propId": "color",
        "value": "blue",
      },
    ],
  ],
  "nativeOnly": Array [
    Array [
      Object {
        "propId": "margin",
        "value": 20,
      },
    ],
  ],
  "root": Array [
    Array [
      Object {
        "propId": "margin",
        "value": 4,
      },
      Object {
        "propId": "padding",
        "value": 4,
      },
    ],
    Array [
      Object {
        "propId": "padding",
        "value": 10,
      },
    ],
  ],
}
`;

exports[`ATOMIZE SHEET WEB DEVELOPMENT 1`] = `
Object {
  "label": Array [
    Array [
      ".d { color:blue /*sheet.label[0]*/ }",
    ],
  ],
  "root": Array [
    Array [
      ".a { margin:4px /*sheet.root*/ }",
      ".b { padding:4px /*sheet.root*/ }",
    ],
    Array [
      ".c { margin:10px /*sheet.root/$web*/ }",
    ],
  ],
  "webOnly": Array [
    Array [
      ".e { color:red /*sheet.webOnly/$web[0]*/ }",
    ],
  ],
}
`;

exports[`ATOMIZE SHEET WEB PRODUCTION 1`] = `
Object {
  "label": Array [
    Array [
      "d",
    ],
  ],
  "root": Array [
    Array [
      "a",
      "b",
    ],
    Array [
      "c",
    ],
  ],
  "webOnly": Array [
    Array [
      "e",
    ],
  ],
}
`;
